--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>Insert title here</title>
-<link href="/resource/css/bootstrap.min.css" rel="stylesheet">
+<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
 </head>
 <body>
-	<div class="container" style="background:red">
-	<div class="container-fluid" style="background:green">
-			<div class="row">1</div>
-			<div class="row">2</div>
-			<div class="row">3
-			</div>
-		</div>
-	</div>
-	
-	<div class="container-fluid" style="background:green">
-  		...
-  		<div class="container" style="background:red">
-			dd
-		</div>
-	
-	</div>
+    <h1>你好，世界！</h1>
 
-</body>
+    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+  </body>
 </html>
